--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@ body{
     background-attachment: fixed;
     background-size: cover;
 } 
-
 .header{
+    position: absolute;
     display:flex;
     width:100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height:150px;
-    background-attachment:fixed;
+    height: 160px;
+    left: 0%;
+    right: 0%;
+    top: 0%;
     background: linear-gradient(to
     bottom, darkred 80%,
     transparent);
@@ -23,7 +22,6 @@ body{
     align-items:center;
     justify-content: center;
 }
-
 .ul{
     font-family: Arial Black;
     font-size: 30px;
@@ -44,17 +42,19 @@ body{
     text-decoration: none;
     position:absolute;
     bottom: 0%;
-    left: 0;
+    right: 0%;
+    left: 0%;
     width: 100%;
     height: 100px;
-    padding-top: 5%;
+    padding-top: 6%;
+    padding-bottom: 1%;
     background: linear-gradient(to
     top, darkred 70%,
     transparent);
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: Arial, Helvetica, sans-serif; 
    
 }
+/*Opciones*/
 
 ul, ol{
     list-style: none;
@@ -80,9 +80,8 @@ ul, ol{
 
 .head{
     position: absolute;
-    top: 25%;
-    left: 50%;  
-    transform: translate(-50%,-50%);
+    top: 70%;
+    min-width: 160px;
 }
 
 .nav li a:hover{
@@ -107,7 +106,7 @@ ul, ol{
 .info{
     background-color: darkred;
     font-family:Arial;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: small;
     margin-top: -20px;
     
@@ -124,10 +123,11 @@ ul, ol{
     text-decoration: none;
     font-family: Arial black, Helvetica, sans-serif;
     margin-left: -2px;
+    margin-right: 50px;
     
 }
 .op{
-    height: 90px;
+    height: 95px;
 }
 
 .nal > li{
