--- a/style(inicio).css
+++ b/style(inicio).css
@@ -5,15 +5,15 @@ body{
     background-image: url("universidad.jpg");
     background-attachment: fixed;
     background-size: cover;
-    min-height: 900px;
+    display: flex;
 }
 .header{
+    position: absolute;
     display:flex;
     width:100%;
-    position: absolute;
+    height: 160px;
     left: 0;
     top: 0;
-    height:150px;
     background-attachment:fixed;
     background: linear-gradient(to
     bottom, darkred 80%,
@@ -41,18 +41,20 @@ body{
     justify-content: center;
     text-decoration: none;
     position:absolute;
-    bottom: -45%;
-    left: 0;
+    bottom: -20%;
+    right: 0%;
+    left: 0%;
     width: 100%;
     height: 100px;
-    padding-top: 5%;
+    padding-top: 6%;
+    padding-bottom: 1%;
     background: linear-gradient(to
     top, darkred 70%,
     transparent);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
     
 }
-
+/*Opciones*/
 ul, ol{
     list-style: none;
 
@@ -77,9 +79,10 @@ ul, ol{
 
 .head{
     position: absolute;
-    top: 25%;
-    left: 50%;  
-    transform: translate(-50%,-50%);
+    top: 70%;
+    min-width: 160px;
+    justify-content: center;
+    display: flex;
 }
 
 .nav li a:hover{
@@ -87,11 +90,20 @@ ul, ol{
     transform: scale(1.1);
 
 }
-
-.nav li:hover> div{
-    display: block;
-
+.nav li div{
+    display:none;
+    position: absolute;
+    top: 200px;
+    left: 50%;  
+    transform: translate(-50%,-50%);
+    min-width: 800px;
+    max-width: 800px;
+    padding-left: 2%;
+    border-radius: 10px;
+    opacity: 0.9;
+    
 }
+/*informacion*/
 .tittle{
     font-size: 30px;
     font-family:Arial, Helvetica, sans-serif;
@@ -111,22 +123,17 @@ ul, ol{
     width: 400px;
 }
 .block{
+    align-items: center;
     display: flex;
     overflow: auto;
     position: absolute;
-    top: 22%;
-    left: 25%; 
-    right: 25%; 
-    transform: translate(-25%,-25%);
+    top: -30%;
     margin-top: 15%;
-    margin-left: 10%;
-    margin-right: 10%;
     background-color: darkred;
     padding: 4%;
-    opacity: 0.9;
     border-radius: 4px;
-    width: 850px;
-    height: 400px;
+    width: 950px;
+    height: 420px;
 }
 
 .uni{
@@ -197,5 +204,3 @@ ul, ol{
     text-decoration: none;
     line-height: 2px;
 }
-
-
