--- a/style(comunidadEscolar).css
+++ b/style(comunidadEscolar).css
@@ -15,12 +15,11 @@ body{
     position: absolute;
     left: 0;
     top: 0;
+    right: 0;
     height:80px;
-    background-attachment:fixed;
-    background: 
-     darkred 80%;
+    background:  darkred 80%;
     padding-bottom: 3%;
-    padding-top: 1%;
+    padding-top: 0%;
     padding-left: 5%;
     align-items:flex-end;
 }
@@ -74,6 +73,7 @@ ul{
     padding-left: 20px;
     padding-right: 15px;
     padding-top: 5px;
+    padding-bottom: 2px;
     width: auto;
     height: auto;
 }
@@ -87,52 +87,53 @@ ul{
     height: 25px;
     
 }
-.alexs{
-    width: 170px;
-    height: 170px;
-    border-radius: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-}
 
 /*bloques*/
 
-.block1{
+.container{
+    width: 90%;
     position: absolute;
-    top: 40vh;
     left: 50%;
-    transform: translate(-50%,-50%);
-    align-items: center;
-    background-color: darkred;
-    width: 80%;
-    height: 320px;
-    border-radius: 10px;
+    transform: translate(-50%,12%);
+    height: auto;
 
 }
-.block2{
-    position: absolute;
-    top: 82vh;
-    left: 50%;
-    transform: translate(-50%,-50%);
+
+.separator{
+    height: 20px;
+}
+
+.block1{
     align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 380px;
+    height: auto;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
 
+}
+.block2{
+    align-items: flex-end;
+    background-color: darkred;
+    height: auto;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
 
 }
 .block3{
-    position: absolute;
-    left: 50%;
-    top: 120vh;
-    transform: translate(-50%,-50%);
     align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 250px;
+    height: auto;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+
+}
+.block4{
+    align-items: flex-end;
+    background-color: darkred;
+    height: auto;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
