--- a/style(ofertaEducativa).css
+++ b/style(ofertaEducativa).css
@@ -15,12 +15,11 @@ body{
     position: absolute;
     left: 0;
     top: 0;
+    right: 0;
     height:80px;
-    background-attachment:fixed;
-    background: 
-     darkred 80%;
+    background:  darkred 80%;
     padding-bottom: 3%;
-    padding-top: 1%;
+    padding-top: 0%;
     padding-left: 5%;
     align-items:flex-end;
 }
@@ -66,7 +65,7 @@ ul{
     transform:scale(20%);
 }
 
-/*bloques*/
+/*informacion*/
 
 .info{
     color: white;
@@ -75,6 +74,7 @@ ul{
     padding-left: 20px;
     padding-right: 15px;
     padding-top: 5px;
+    padding-bottom: 2px;
     width: auto;
     height: auto;
 }
@@ -88,78 +88,63 @@ ul{
     height: 25px;
     
 }
-.alexs{
-    width: 170px;
-    height: 170px;
-    border-radius: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+
+/*Bloques*/
+
+.container{
+    width: 90%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,20%);
+    height: auto;
+
+}
+
+.separator{
+    height: 20px;
 }
 
 .block0{
-    position: absolute;
-    top: 27vh;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    align-items: center;
+    align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .block1{
-    position: absolute;
-    top: 42vh;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    align-items: center;
+    align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
 
 }
 .block2{
-    position: absolute;
-    top: 58vh;
-    left: 50%;
-    transform: translate(-50%,-50%);
     align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
-
 
 }
 .block3{
-    position: absolute;
-    left: 50%;
-    top: 73vh;
-    transform: translate(-50%,-50%);
     align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
 
-
 }
-
 .block4{
-    position: absolute;
-    left: 50%;
-    top: 88vh;
-    transform: translate(-50%,-50%);
     align-items: flex-end;
     background-color: darkred;
-    width: 80%;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
